Simplify check for applying username fallback in ServerController